# PZServerLauncherLinux

./: .dockerignore  .gitignore  Dockerfile  PROJECT_PLAN.md  README.md  compose.yaml  pyproject.toml
app/: __init__.py  cli.py  config.py  db.py  dependencies.py  main.py  models.py  security.py
app/routes/: api.py  web.py
app/services/: __init__.py  audit.py  backup_scheduler.py  config_files.py  imports.py  profile_live.py  release_check.py  runtime.py  sandbox_files.py  workshop_browser.py  workshop_progress.py  zomboid.py
app/static/: app.css
app/templates/: base.html  consoles.html  dashboard.html  host.html  login.html  profile_workspace.html  profiles.html  remote.html  setup.html  users.html
docs/: caddy.md  docker.md  nginx.md  ubuntu-vps-setup.md
packaging/deb/: postinst  postrm  prerm  pzserverlauncherlinux.default  pzserverlauncherlinux.service
scripts/: backup-app-data.sh  build-deb.sh  install-ubuntu.sh  update.sh
systemd/: pzserverlauncher.service
tests/: conftest.py  test_auth.py  test_cli.py  test_profiles.py  test_workshop_progress.py
