[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "pzserverlauncherlinux"
version = "1.1.0"
description = "Linux web launcher for Project Zomboid dedicated servers."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "itsdangerous>=2.2.0,<3.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "pydantic-settings>=2.6.0,<3.0.0",
  "python-multipart>=0.0.18,<1.0.0",
  "sqlalchemy>=2.0.36,<3.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.scripts]
pzserverlauncherlinux = "app.cli:main"

[project.optional-dependencies]
dev = [
  "build>=1.2.2,<2.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
artifacts = [
  "app/assets/**",
  "app/static/**",
  "app/templates/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
